// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order <AfterTitle/> should display the refund action (because total_price > total_refunds) 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-multibutton-group-3397"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-6"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          attach_money
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-6-tooltip-target"
          />
          Refund
        </span>
      </button>
    </div>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`Order <AfterTitle/> should display the refund action 1`] = `
<div>
  <div
    class="container"
  >
    <div
      class="ui-multibutton-group-3397"
      style="display: flex;"
    >
      <button
        aria-disabled="false"
        class="ui-button-wrapper-cef1 actionButton ui-button-fill-cef1 ui-button-secondary-cef1 ui-button-small-cef1"
        id="action-button-4"
        type="button"
      >
        <i
          aria-hidden="true"
          class="material-icons ui-buttonicon-icon-e486 ui-buttonicon-small-e486"
        >
          attach_money
        </i>
        <span
          class="ui-button-content-cef1"
        >
          <span
            id="action-button-4-tooltip-target"
          />
          Refund
        </span>
      </button>
    </div>
  </div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`Order <AfterTitle/> should not display the refund action because the charge is not refundable 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`Order <AfterTitle/> should not display the refund action because the order was cancelled 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`Order <AfterTitle/> should not display the refund action because the order was refunded 1`] = `
<div>
  <div
    class="fieldContainer staticField"
  >
    <span
      class="fieldLabel"
    >
      Created
      : 
    </span>
    <span
      class="fieldValue"
    />
  </div>
</div>
`;

exports[`Order <AfterTitle/> should not render because no integration id was provided 1`] = `<div />`;

exports[`Order <AfterTitle/> should not render because widgets are being edited 1`] = `<div />`;

exports[`Order <BeforeContent/> should render the total_refunds field to 0.00 because the value on the associated charge is null 1`] = `
<div
  class="fieldContainer staticField"
>
  <span
    class="fieldLabel"
  >
    Total refunds on charge
    : 
  </span>
  <span
    class="fieldValue"
  >
    0.00
  </span>
</div>
`;

exports[`Order <BeforeContent/> should render with the total_refunds field from the associated charge 1`] = `
<div
  class="fieldContainer staticField"
>
  <span
    class="fieldLabel"
  >
    Total refunds on charge
    : 
  </span>
  <span
    class="fieldValue"
  >
    5.00
  </span>
</div>
`;

exports[`Order <TitleWrapper/> should not render any link because no customer hash was passed 1`] = `
<a
  class="orderTitle"
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`Order <TitleWrapper/> should render the base link because a customer hash was passed and no custom link is set 1`] = `
<a
  class="orderTitle"
  href="https://storegorgias3-sp.admin.rechargeapps.com/merchant/orders/2345"
  rel="noopener noreferrer"
  target="_blank"
/>
`;

exports[`Order <TitleWrapper/> should render the custom link because a customer hash was passed and a custom link is set 1`] = `
<a
  class="orderTitle"
  href="https://google.com/s8d4f6sdf4"
  rel="noopener noreferrer"
  target="_blank"
/>
`;
